--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ mongoengine==0.10.0
 path.py==7.6.1
 pexpect==3.3
 pickleshare==0.5
+pyjade==3.1.0
 pymongo==3.0.3
 pytz==2015.4
 simplegeneric==0.8.1
